# call-me-maybe

./: .gitignore  <  Makefile  README.md  main.py  pyproject.toml
data/input/: function_calling_tests.json
data/ouput/: output.json
data/output/: function_calling_results.json
data/second_input/: test.json
src/: __init__.py  __main__.py  decoding.py  function.py  json_obj.py  main.py  parsing.py  voctest.py
