[project]
name = "cmm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "flake8>=7.3.0",
    "mccabe>=0.7.0",
    "mypy>=2.1.0",
    "numpy>=2.4.4",
    "pydantic>=2.13.4",
    "regex>=2026.4.4",
    "torch>=2.11.0",
    "transformers>=5.8.0",
    "types-regex>=2026.5.9.20260518",
]
[[tool.mypy.overrides]]
module = "src.llm_sdk.*"
ignore_errors = true
